@@ -83,9 +83,14 @@ namespace Gphoto2.Base
             this.handle = new HandleRef (this, native);
         }
         
-        protected override void Cleanup ()
+        protected override void Dispose (bool disposing)
         {
-            Error.CheckError(gp_abilities_list_free(this.handle));
+            if(!base.Disposed)
+            {
+                // Don't check the error as we don't want to throw an exception if it fails 
+                gp_abilities_list_free(base.Handle);
+                base.Dispose(disposing);
+            }
         }
         
         public void Load (Context context)
